<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsvScroll"
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

               <!-- <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/ceraprobold"
                    android:padding="10dp"

                    android:paddingEnd="5dp"
                    android:text="Your Classes"
                    android:textColor="@color/black"
                    android:textSize="20dp" />-->
                <Spinner
                    android:id="@+id/chooseClass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/skyblue_text_color"
                    android:entries="@array/chooseClass" />

                <TextView
                    android:id="@+id/tvTitle_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/chooseClass"
                    android:layout_alignBottom="@id/chooseClass"
                    android:layout_toRightOf="@id/chooseClass"
                    android:fontFamily="@font/ceraprolight"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="20dp" />
                <ImageView
                    android:id="@+id/ivRefresh"
                    android:padding="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@id/chooseClass"
                    app:tint="@color/sky_blue_1DAFC6"
                    android:src="@drawable/ic_baseline_refresh_24"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvClassPages_dots"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/top_green_dots_margin_left"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:layout_alignBottom="@id/tvTitle_value"
                    android:layout_alignTop="@id/tvTitle_value"
                    android:layout_alignParentRight="true"
                    android:visibility="gone"/>

                <RelativeLayout
                    android:id="@+id/relheader"
                    android:layout_marginTop="8dp"
                    android:layout_below="@id/tvTitle_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvClassPages"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/rl_urgent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relheader"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:id="@+id/tv_chaptertype"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ceraprobold"
                        android:paddingTop="12dp"
                        android:text="All Chapters"
                        android:textColor="@color/black"
                        android:textSize="20dp" />

                    <LinearLayout
                        android:id="@+id/llSeeAll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingTop="12dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/see_all"
                            android:textColor="@color/black"
                            android:textSize="@dimen/see_all_text_size" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="2dp"
                            android:background="@color/parrotgreen" />
                    </LinearLayout>
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_uchapters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rl_urgent"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:paddingStart="2dp"
                    android:paddingEnd="2dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


                <RelativeLayout
                    android:layout_below="@+id/rv_uchapters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:id="@+id/tvClass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ceraprobold"
                        android:paddingTop="10dp"
                        android:paddingBottom="5dp"
                        android:text="@string/class_performance_in"
                        android:textColor="@color/black"
                        android:textSize="20dp" />

                    <LinearLayout
                        android:id="@+id/llsortby"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_below="@id/tvClass"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2.5dp"
                            android:fontFamily="@font/ceraprobold"
                            android:gravity="center"
                            android:text="Sort By"
                            android:textColor="@color/black"
                            android:textSize="11dp" />


                        <HorizontalScrollView
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:fillViewport="true"
                            android:scrollbars="none">



                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="50dp"
                                android:layout_below="@id/tvClass"
                                android:gravity="center_vertical"
                                android:orientation="horizontal"
                                android:padding="5dp">

                                <TextView
                                    android:id="@+id/tv_points"
                                    android:layout_width="80dp"
                                    android:layout_height="match_parent"
                                    android:layout_margin="2.5dp"
                                    android:background="@drawable/round_skyblue"
                                    android:fontFamily="@font/cerapromedium"
                                    android:gravity="center"
                                    android:text="Points"
                                    android:textColor="@color/navicolor"
                                    android:textSize="@dimen/sortby_text_size" />

                                <TextView
                                    android:id="@+id/tvHomeWork"
                                    android:layout_width="80dp"
                                    android:layout_height="match_parent"
                                    android:layout_margin="2.5dp"
                                    android:background="@drawable/round_boundary_navi_new"
                                    android:fontFamily="@font/cerapromedium"
                                    android:gravity="center"
                                    android:text="Homework"
                                    android:textColor="@color/black"
                                    android:textSize="@dimen/sortby_text_size" />

                                <TextView
                                    android:id="@+id/tv_syllabus"
                                    android:layout_width="80dp"
                                    android:layout_height="match_parent"
                                    android:layout_margin="2.5dp"
                                    android:background="@drawable/round_boundary_navi_new"
                                    android:fontFamily="@font/cerapromedium"
                                    android:gravity="center"
                                    android:text="Syllabus done"
                                    android:textColor="@color/black"
                                    android:textSize="@dimen/sortby_text_size" />

                                <TextView
                                    android:id="@+id/tv_confidence"
                                    android:layout_width="80dp"
                                    android:layout_height="match_parent"
                                    android:layout_margin="2.5dp"
                                    android:background="@drawable/round_boundary_navi_new"
                                    android:fontFamily="@font/cerapromedium"
                                    android:gravity="center"
                                    android:text="Confidence"
                                    android:textColor="@color/black"
                                    android:textSize="@dimen/sortby_text_size" />

                                <TextView
                                    android:id="@+id/tv_syllMaster"
                                    android:layout_width="110dp"
                                    android:layout_height="match_parent"
                                    android:layout_margin="2.5dp"
                                    android:background="@drawable/round_boundary_navi_new"
                                    android:fontFamily="@font/cerapromedium"
                                    android:gravity="center"
                                    android:text="@string/syllabus_mastered"
                                    android:textColor="@color/black"
                                    android:textSize="@dimen/sortby_text_size" />
                            </LinearLayout>
                        </HorizontalScrollView>


                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_students"
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        android:layout_below="@+id/llsortby"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:padding="5dp" />
                </RelativeLayout>
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/progress_color"
            android:layout_centerInParent="true"/>

    </RelativeLayout>
</layout>